Create endpoint get all rooms
